--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimary">#6A1B9A</color>
     <color name="colorPrimaryDark">#3B085A</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffffff</color>
